@@ -127,7 +127,7 @@ public class FareRulesServiceImpl implements FareRulesService {
             if (airlines == null || airlines.isEmpty()) {
                 throw new BaseException(ErrorCode.AIRLINE_NOT_FOUND);
             }
-            return airlines.getFirst().getId();
+            return airlines.get(0).getId();
         } catch (FeignException.NotFound e) {
             throw new BaseException(ErrorCode.AIRLINE_NOT_FOUND);
         } catch (FeignException e) {
